<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".ui.CreateAcountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_Message2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <EditText
            android:id="@+id/editTextCedula"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/editText_Cedula"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textAlignment="center"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/editText_FirstName"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/editText_LastName"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editTextDireccion"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/editText_Direccion"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/editText_Email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/editText_PasswordAcount"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editTextConfirPassword"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/editText_ConfirmPassword"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_margin="50dp"
            android:backgroundTint="#A39E4D"
            android:onClick="onclickCreateUser"
            android:text="@string/textView_Message2" />
    </LinearLayout>
</ScrollView>
